--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.4.2",
     "@next/font": "^13.2.3",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/lodash": "^4.14.191",
