--- a/package.json
+++ b/package.json
@@ -10,21 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^13.4.2",
     "@next/font": "^13.2.3",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.0.11",
-    "@types/react-redux": "^7.1.25",
-    "@types/react-slick": "^0.23.10",
-    "@types/styled-components": "^5.1.26",
-    "@types/yup": "^0.32.0",
     "axios": "^1.3.4",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "^8.35.0",
-    "eslint-config-next": "13.2.3",
     "formik": "^2.2.9",
     "gsap": "^3.11.4",
     "i18next": "^22.4.11",
@@ -38,21 +27,31 @@
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
-    "sharp": "^0.32.1",
     "styled-components": "^5.3.6",
-    "typescript": "5.0.4",
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "typescript": "5.0.4",
     "@builder.io/partytown": "^0.7.6",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
+    "eslint-config-next": "13.2.3",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "20.1.4",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.0.11",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-slick": "^0.23.10",
+    "@types/styled-components": "^5.1.26",
+    "@types/yup": "^0.32.0",
+    "@next/bundle-analyzer": "^13.4.2"
   }
 }
