--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "sharp": "^0.32.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "yup": "^1.0.2"
